# Copyright 2022 The Magma Authors.

# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_proto_grpc//python:defs.bzl", "python_grpc_library", "python_proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "cbsd_proto",
    srcs = ["cbsd.proto"],
    deps = ["@com_google_protobuf//:wrappers_proto"],
)

python_proto_library(
    name = "cbsd_python_proto",
    protos = [":cbsd_proto"],
)

python_grpc_library(
    name = "cbsd_python_grpc",
    protos = [":cbsd_proto"],
)
