# Copyright 2021 The Magma Authors.

# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_proto_grpc//python:defs.bzl", "python_proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "mconfigs_proto",
    srcs = ["mconfig/mconfigs.proto"],
    deps = ["//orc8r/protos:common_proto"],
)

python_proto_library(
    name = "mconfigs_python_proto",
    protos = [":mconfigs_proto"],
    deps = ["//orc8r/protos:common_python_proto"],
)
