# Copyright 2021 The Magma Authors.

# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_proto_grpc//cpp:defs.bzl", "cpp_grpc_library", "cpp_proto_library")
load("@rules_proto_grpc//python:defs.bzl", "python_grpc_library", "python_proto_library")

package(default_visibility = ["//visibility:public"])

cpp_proto_library(
    name = "mconfigs_cpp_proto",
    protos = [":mconfigs_proto"],
    deps = ["//orc8r/protos:common_cpp_proto"],
)

python_proto_library(
    name = "mconfigs_python_proto",
    protos = [":mconfigs_proto"],
    deps = ["//orc8r/protos:common_python_proto"],
)

proto_library(
    name = "mconfigs_proto",
    srcs = ["mconfig/mconfigs.proto"],
    deps = ["//orc8r/protos:common_proto"],
)

cpp_grpc_library(
    name = "abort_session_cpp_grpc",
    protos = [":abort_session_proto"],
)

cpp_proto_library(
    name = "abort_session_cpp_proto",
    protos = [":abort_session_proto"],
)

proto_library(
    name = "abort_session_proto",
    srcs = ["abort_session.proto"],
)

python_grpc_library(
    name = "abort_session_python_grpc",
    protos = [":abort_session_proto"],
)

cpp_proto_library(
    name = "apn_cpp_proto",
    protos = [":apn_proto"],
)

python_proto_library(
    name = "apn_python_proto",
    protos = [":apn_proto"],
)

proto_library(
    name = "apn_proto",
    srcs = ["apn.proto"],
)

cpp_proto_library(
    name = "subscriberdb_cpp_proto",
    protos = [":subscriberdb_proto"],
    deps = [
        ":apn_cpp_proto",
        "//orc8r/protos:common_cpp_proto",
        "//orc8r/protos:digest_cpp_proto",
    ],
)

python_proto_library(
    name = "subscriberdb_python_proto",
    protos = [":subscriberdb_proto"],
    deps = [
        ":apn_python_proto",
        "//orc8r/protos:common_python_proto",
        "//orc8r/protos:digest_python_proto",
    ],
)

cpp_grpc_library(
    name = "subscriberdb_cpp_grpc",
    protos = [":subscriberdb_proto"],
    deps = [
        ":apn_cpp_proto",
        "//orc8r/protos:common_cpp_proto",
        "//orc8r/protos:digest_cpp_proto",
    ],
)

python_grpc_library(
    name = "subscriberdb_python_grpc",
    protos = [":subscriberdb_proto"],
    deps = [
        ":apn_python_proto",
        "//orc8r/protos:common_python_proto",
        "//orc8r/protos:digest_python_proto",
    ],
)

proto_library(
    name = "subscriberdb_proto",
    srcs = ["subscriberdb.proto"],
    deps = [
        ":apn_proto",
        "//orc8r/protos:common_proto",
        "//orc8r/protos:digest_proto",
        "@com_google_protobuf//:field_mask_proto",
    ],
)

cpp_proto_library(
    name = "mobilityd_cpp_proto",
    protos = [":mobilityd_proto"],
    deps = [":subscriberdb_cpp_proto"],
)

python_proto_library(
    name = "mobilityd_python_proto",
    protos = [":mobilityd_proto"],
    deps = [":subscriberdb_python_proto"],
)

cpp_grpc_library(
    name = "mobilityd_cpp_grpc",
    protos = [":mobilityd_proto"],
    deps = [
        ":subscriberdb_cpp_proto",
        "//orc8r/protos:common_cpp_proto",
    ],
)

python_grpc_library(
    name = "mobilityd_python_grpc",
    protos = [":mobilityd_proto"],
    deps = [
        ":subscriberdb_python_proto",
        "//orc8r/protos:common_python_proto",
    ],
)

proto_library(
    name = "mobilityd_proto",
    srcs = ["mobilityd.proto"],
    deps = [
        ":subscriberdb_proto",
        "//orc8r/protos:common_proto",
    ],
)

cpp_proto_library(
    name = "policydb_cpp_proto",
    protos = [":policydb_proto"],
    deps = [
        ":mobilityd_cpp_proto",
        "//orc8r/protos:common_cpp_proto",
    ],
)

cpp_grpc_library(
    name = "policydb_cpp_grpc",
    protos = [":policydb_proto"],
    deps = [
        ":mobilityd_cpp_proto",
        "//orc8r/protos:common_cpp_proto",
    ],
)

proto_library(
    name = "policydb_proto",
    srcs = ["policydb.proto"],
    deps = [
        ":mobilityd_proto",
        "//orc8r/protos:common_proto",
    ],
)

python_proto_library(
    name = "policydb_python_proto",
    protos = [":policydb_proto"],
    deps = [
        ":mobilityd_python_proto",
    ],
)

python_grpc_library(
    name = "policydb_python_grpc",
    protos = [":policydb_proto"],
    deps = [":mobilityd_python_proto"],
)

proto_library(
    name = "sctpd_proto",
    srcs = ["sctpd.proto"],
)

cpp_proto_library(
    name = "sctpd_cpp_proto",
    protos = [":sctpd_proto"],
    deps = [
        ":apn_cpp_proto",
        "//orc8r/protos:common_cpp_proto",
        "//orc8r/protos:digest_cpp_proto",
    ],
)

cpp_grpc_library(
    name = "sctpd_cpp_grpc",
    protos = [":sctpd_proto"],
    deps = [
        ":sctpd_cpp_proto",
        "//orc8r/protos:common_cpp_proto",
        "//orc8r/protos:digest_cpp_proto",
    ],
)

cpp_proto_library(
    name = "session_manager_cpp_proto",
    protos = [":session_manager_proto"],
    deps = [
        ":apn_cpp_proto",
        ":policydb_cpp_proto",
        "//orc8r/protos:common_cpp_proto",
    ],
)

cpp_grpc_library(
    name = "session_manager_cpp_grpc",
    protos = [":session_manager_proto"],
    deps = [
        ":apn_cpp_proto",
        ":policydb_cpp_proto",
        "//orc8r/protos:common_cpp_proto",
    ],
)

proto_library(
    name = "session_manager_proto",
    srcs = ["session_manager.proto"],
    deps = [
        ":apn_proto",
        ":policydb_proto",
        ":subscriberdb_proto",
        "//orc8r/protos:common_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

python_grpc_library(
    name = "session_manager_python_grpc",
    protos = [":session_manager_proto"],
    deps = [
        "//lte/protos:policydb_python_proto",
        "//orc8r/protos:common_python_proto",
    ],
)

python_proto_library(
    name = "session_manager_python_proto",
    protos = [":session_manager_proto"],
    deps = [
        "//lte/protos:policydb_python_proto",
        "//orc8r/protos:common_python_proto",
    ],
)

cpp_proto_library(
    name = "pipelined_cpp_proto",
    protos = [":pipelined_proto"],
    deps = [
        ":apn_cpp_proto",
        ":policydb_cpp_proto",
        ":session_manager_cpp_proto",
        "//orc8r/protos:common_cpp_proto",
    ],
)

cpp_grpc_library(
    name = "pipelined_cpp_grpc",
    protos = [":pipelined_proto"],
    deps = [
        ":apn_cpp_proto",
        ":policydb_cpp_proto",
        ":session_manager_cpp_proto",
        "//orc8r/protos:common_cpp_proto",
    ],
)

proto_library(
    name = "pipelined_proto",
    srcs = ["pipelined.proto"],
    deps = [
        ":apn_proto",
        ":mobilityd_proto",
        ":policydb_proto",
        ":session_manager_proto",
        ":subscriberdb_proto",
        "//orc8r/protos:common_proto",
    ],
)

python_proto_library(
    name = "pipelined_python_proto",
    protos = [":pipelined_proto"],
    deps = [
        ":policydb_python_proto",
        ":session_manager_python_proto",
    ],
)

python_grpc_library(
    name = "pipelined_python_grpc",
    protos = [":pipelined_proto"],
    deps = [
        ":policydb_python_proto",
        ":session_manager_python_proto",
        "//orc8r/protos:common_python_proto",
    ],
)

cpp_grpc_library(
    name = "spgw_service_cpp_grpc",
    protos = [":spgw_service_proto"],
    deps = [
        "policydb_cpp_proto",
        "subscriberdb_cpp_proto",
    ],
)

python_grpc_library(
    name = "spgw_service_grpc_proto",
    protos = [":spgw_service_proto"],
    deps = [
        "policydb_python_proto",
        "subscriberdb_python_proto",
    ],
)

cpp_proto_library(
    name = "spgw_service_cpp_proto",
    protos = [":spgw_service_proto"],
    deps = [
        ":policydb_cpp_proto",
        ":subscriberdb_cpp_proto",
    ],
)

python_proto_library(
    name = "keyval_python_proto",
    protos = [":keyval_proto"],
    deps = [
        ":mobilityd_python_proto",
        ":subscriberdb_python_proto",
    ],
)

proto_library(
    name = "keyval_proto",
    srcs = ["keyval.proto"],
    deps = [
        ":mobilityd_proto",
        ":subscriberdb_proto",
    ],
)

proto_library(
    name = "spgw_service_proto",
    srcs = ["spgw_service.proto"],
    deps = [
        ":policydb_proto",
        ":subscriberdb_proto",
    ],
)

python_grpc_library(
    name = "spgw_service_python_grpc",
    protos = [":spgw_service_proto"],
)

proto_library(
    name = "sms_orc8r_proto",
    srcs = ["sms_orc8r.proto"],
    deps = ["//orc8r/protos:common_proto"],
)

cpp_proto_library(
    name = "sms_orc8r_cpp_proto",
    protos = [":sms_orc8r_proto"],
    deps = ["//orc8r/protos:common_cpp_proto"],
)

cpp_grpc_library(
    name = "sms_orc8r_cpp_grpc",
    protos = [":sms_orc8r_proto"],
    deps = [":sms_orc8r_cpp_proto"],
)

python_grpc_library(
    name = "sms_orc8r_python_grpc",
    protos = [":sms_orc8r_proto"],
    deps = ["//orc8r/protos:common_python_proto"],
)

proto_library(
    name = "diam_errors_proto",
    srcs = ["diam_errors.proto"],
)

python_proto_library(
    name = "diam_errors_python_proto",
    protos = [":diam_errors_proto"],
)

cpp_proto_library(
    name = "diam_errors_cpp_proto",
    protos = [":diam_errors_proto"],
)

proto_library(
    name = "subscriberauth_proto",
    srcs = ["subscriberauth.proto"],
    deps = [":diam_errors_proto"],
)

cpp_proto_library(
    name = "subscriberauth_cpp_proto",
    protos = [":subscriberauth_proto"],
    deps = [":diam_errors_cpp_proto"],
)

cpp_grpc_library(
    name = "subscriberauth_cpp_grpc",
    protos = [":subscriberauth_proto"],
    deps = [":subscriberauth_cpp_proto"],
)

proto_library(
    name = "ha_orc8r_proto",
    srcs = ["ha_orc8r.proto"],
)

cpp_proto_library(
    name = "ha_orc8r_cpp_proto",
    protos = [":ha_orc8r_proto"],
)

cpp_grpc_library(
    name = "ha_orc8r_cpp_grpc",
    protos = [":ha_orc8r_proto"],
    deps = [":ha_orc8r_cpp_proto"],
)

proto_library(
    name = "s6a_service_proto",
    srcs = ["s6a_service.proto"],
)

cpp_proto_library(
    name = "s6a_service_cpp_proto",
    protos = [":s6a_service_proto"],
)

python_proto_library(
    name = "s6a_service_python_proto",
    protos = [":s6a_service_proto"],
)

cpp_grpc_library(
    name = "s6a_service_cpp_grpc",
    protos = [":s6a_service_proto"],
    deps = [":s6a_service_cpp_proto"],
)

proto_library(
    name = "s1ap_service_proto",
    srcs = ["s1ap_service.proto"],
    deps = [
        "//orc8r/protos:common_proto",
    ],
)

cpp_proto_library(
    name = "s1ap_service_cpp_proto",
    protos = [":s1ap_service_proto"],
    deps = [
        "//orc8r/protos:common_cpp_proto",
    ],
)

cpp_grpc_library(
    name = "s1ap_service_cpp_grpc",
    protos = [":s1ap_service_proto"],
    deps = [":s1ap_service_cpp_proto"],
)

proto_library(
    name = "ha_service_proto",
    srcs = ["ha_service.proto"],
)

python_grpc_library(
    name = "ha_service_python_grpc",
    protos = [":ha_service_proto"],
)

cpp_proto_library(
    name = "ha_service_cpp_proto",
    protos = [":ha_service_proto"],
)

cpp_grpc_library(
    name = "ha_service_cpp_grpc",
    protos = [":ha_service_proto"],
    deps = [":ha_service_cpp_proto"],
)

python_grpc_library(
    name = "s6a_service_python_grpc",
    protos = [":s6a_service_proto"],
)

python_grpc_library(
    name = "subscriberauth_python_grpc",
    protos = [":subscriberauth_proto"],
)

proto_library(
    name = "enodebd_proto",
    srcs = ["enodebd.proto"],
    deps = [
        "//orc8r/protos:common_proto",
        "//orc8r/protos:service303_proto",
    ],
)

python_proto_library(
    name = "enodebd_python_proto",
    protos = [":enodebd_proto"],
    deps = [
        "//orc8r/protos:common_python_proto",
        "//orc8r/protos:service303_python_proto",
    ],
)

python_grpc_library(
    name = "enodebd_python_grpc",
    protos = [":enodebd_proto"],
    deps = [
        "//orc8r/protos:common_python_proto",
        "//orc8r/protos:service303_python_proto",
    ],
)

python_grpc_library(
    name = "s1ap_service_python_grpc",
    protos = [":s1ap_service_proto"],
)

# This proto library is exclusively meant for the state service.
# Users can manually add proto libraries to state.yml.
# This means that all proto libraries need to be available
# in builds of the state service.
proto_library(
    name = "all_proto",
    srcs = glob(["*.proto"]),
    visibility = ["//visibility:private"],
    deps = [
        "//orc8r/protos:common_proto",
        "//orc8r/protos:digest_proto",
        "//orc8r/protos:service303_proto",
        "@com_google_protobuf//:field_mask_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

# See comment at :all_proto
python_proto_library(
    name = "all_python_proto",
    protos = [":all_proto"],
    visibility = ["//orc8r/gateway/python/magma/state:__pkg__"],
    deps = [
        "//orc8r/protos:common_python_proto",
        "//orc8r/protos:digest_python_proto",
        "//orc8r/protos:service303_python_proto",
    ],
)
